--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native-reanimated": "^1.2.0",
     "react-native-screens": "^2.0.0-alpha.3",
     "react-navigation": "^4.0.6",
-    "react-navigation-stack": "^1.8.0"
+    "react-navigation-stack": "^1.8.0",
+    "react-navigation-tabs": "^2.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
