--- a/package.json
+++ b/package.json
@@ -8,14 +8,26 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.13",
+    "apollo-link-error": "^1.1.12",
+    "apollo-link-http": "^1.5.16",
+    "apollo-link-state": "^0.4.2",
+    "apollo-link-ws": "^1.0.19",
+    "apollo-utilities": "^1.3.2",
+    "graphql": "^14.5.6",
+    "graphql-tag": "^2.10.1",
     "react": "16.8.6",
+    "react-apollo-hooks": "^0.5.0",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-screens": "^2.0.0-alpha.3",
     "react-navigation": "^4.0.6",
     "react-navigation-stack": "^1.8.0",
-    "react-navigation-tabs": "^2.5.4"
+    "react-navigation-tabs": "^2.5.4",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
