--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-link-state": "^0.4.2",
     "apollo-link-ws": "^1.0.19",
     "apollo-utilities": "^1.3.2",
+    "formik": "^1.5.8",
     "graphql": "^14.5.6",
     "graphql-tag": "^2.10.1",
     "react": "16.8.6",
