--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react": "16.8.6",
     "react-apollo-hooks": "^0.5.0",
     "react-native": "0.60.5",
+    "react-native-elements": "^1.2.1",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-screens": "^2.0.0-alpha.3",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.6",
     "react-navigation-stack": "^1.8.0",
     "react-navigation-tabs": "^2.5.4",
