--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "react-navigation": "^4.0.6",
     "react-navigation-stack": "^1.8.0",
     "react-navigation-tabs": "^2.5.4",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
