--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^1.5.8",
     "graphql": "^14.5.6",
     "graphql-tag": "^2.10.1",
+    "moment": "^2.24.0",
     "react": "16.8.6",
     "react-apollo-hooks": "^0.5.0",
     "react-native": "0.60.5",
